Add Passenger List certificate DNS records

--- a/dns/passengerlist.org-hosted_zone.yml
+++ b/dns/passengerlist.org-hosted_zone.yml
@@ -65,6 +65,18 @@ Resources:
       Comment: AWS ACM validation records for prx-legacy in us-east-1
       HostedZoneId: !Ref HostedZone
       RecordSets:
+        # passengerlist.org
+        - Name: !Sub _d77012a2a69353bcf2baed8cb56d9ae0.${Domain}
+          ResourceRecords:
+            - _af6bf24199f63e294f2ff5612ddab647.mvtxpqxpkb.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # www.passengerlist.org
+        - Name: !Sub _ff0a8ac7425ea0fc2578d9fe61cc5140.www.${Domain}
+          ResourceRecords:
+            - _6e30f6a6df351b6ad4f296f7cb8f0734.mvtxpqxpkb.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
         # departures.passengerlist.org
         - Name: !Sub _bb6e020f8890ff1d2a083b3f48fe9130.departures.${Domain}
           ResourceRecords:
