--- a/db/shared-apps-aurora-pg/database-cluster.yml
+++ b/db/shared-apps-aurora-pg/database-cluster.yml
@@ -33,10 +33,18 @@ Parameters:
     Type: String
     Description: >-
       (optional) This value is required when creating fresh primary clusters.
+    MinLength: 1
+    MaxLength: 16
+    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
+    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
   DbClusterMasterUserPassword:
     Type: String
     Description: >-
       (optional) This value is required when creating fresh primary clusters.
+    MinLength: 8
+    MaxLength: 41
+    AllowedPattern: "[a-zA-Z0-9]*"
+    ConstraintDescription: must contain only alphanumeric characters.
   EnvironmentType:
     Type: String
     AllowedValues:
@@ -198,7 +206,7 @@ Resources:
     Properties:
       GroupDescription: !Sub >-
         Primary security group for the shared ${EnvironmentType} Aurora
-        Postgresql database
+        PostgreSQL database
       Tags:
         - { Key: Name, Value: !Sub "${AWS::StackName}_shared-pg-aurora" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
