Enable logging for Aurora DBs

--- a/db/shared-apps-aurora-mysql/database-cluster.yml
+++ b/db/shared-apps-aurora-mysql/database-cluster.yml
@@ -79,9 +79,11 @@ Resources:
       # BackupRetentionPeriod
       DBSubnetGroupName: !Ref DbSubnetGroup
       DeletionProtection: true
-      # EnableCloudwatchLogsExports:
-      #   - postgresql
-      #   - upgrade
+      EnableCloudwatchLogsExports:
+        #   - audit
+        - error
+        - general
+        - slowquery
       Engine: aurora-mysql
       EngineVersion: "5.7.mysql_aurora.2.10.0"
       GlobalClusterIdentifier: !If
@@ -180,7 +182,9 @@ Resources:
   DbSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
     Properties:
-      DBSubnetGroupDescription: tktktk # TODO
+      DBSubnetGroupDescription: !Sub >-
+        Subnet group for the shared ${EnvironmentType} Aurora MySQL containing
+        subnets from the shared VPC the database is launched into
       SubnetIds:
         - !Ref Subnet1Id
         - !Ref Subnet2Id
