--- a/db/shared-apps-aurora-pg/database-cluster.yml
+++ b/db/shared-apps-aurora-pg/database-cluster.yml
@@ -87,9 +87,9 @@ Resources:
       # BackupRetentionPeriod
       DBSubnetGroupName: !Ref DbSubnetGroup
       DeletionProtection: true
-      # EnableCloudwatchLogsExports:
-      #   - postgresql
-      #   - upgrade
+      EnableCloudwatchLogsExports:
+        - postgresql
+        # - upgrade
       Engine: aurora-postgresql
       EngineVersion: "12.4"
       GlobalClusterIdentifier: !If
@@ -188,7 +188,9 @@ Resources:
   DbSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
     Properties:
-      DBSubnetGroupDescription: tktktk # TODO
+      DBSubnetGroupDescription: !Sub >-
+        Subnet group for the shared ${EnvironmentType} Aurora PostgreSQL
+        containing subnets from the shared VPC the database is launched into
       SubnetIds:
         - !Ref Subnet1Id
         - !Ref Subnet2Id
