--- a/db/shared-apps-aurora-pg/database-cluster.yml
+++ b/db/shared-apps-aurora-pg/database-cluster.yml
@@ -89,7 +89,7 @@ Resources:
       DeletionProtection: true
       EnableCloudwatchLogsExports:
         - postgresql
-        # - upgrade
+        # - upgrade Not supported by Aurora
       Engine: aurora-postgresql
       EngineVersion: "12.4"
       GlobalClusterIdentifier: !If
