--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -139,7 +139,11 @@ Resources:
       IpProtocol: "-1"
 
   # This adds a rule to the load balancer security group defined in
-  # shared-alb.yml
+  # shared-alb.yml. It allows all TCP egress traffic from the load balancer
+  # security group to to instance security group (i.e., allows traffic from
+  # the load balancer to the EC2 instances). It does NOT allow ingress traffic
+  # from the load balancer to the EC2 instances; that is handled by a rule on
+  # the instance security group.
   LoadBalancerSecurityGroupInstanceEgress:
     Type: AWS::EC2::SecurityGroupEgress
     Properties:
