--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -95,7 +95,7 @@ Resources:
       ToPort: 443
 
   KmsEndpointAccessSecurityGroup:
-    # This security group is intented to be used by EC2 instances, ECS
+    # This security group is intended to be used by EC2 instances, ECS
     # services, etc. Resources that belong to this group will be able to send
     # traffic to the KMS service.
     Type: AWS::EC2::SecurityGroup
