--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -198,7 +198,7 @@ Resources:
         - Key: idle_timeout.timeout_seconds
           Value: "150"
         - Key: access_logs.s3.enabled
-          Value: "true"
+          Value: "true" # TODO Do we want this?
         - Key: access_logs.s3.bucket
           Value: !Ref AccessLogsBucket
       Scheme: internet-facing
