Add missing ALB dependencies

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -305,6 +305,8 @@ Resources:
 
   Alb:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    DependsOn:
+      - AccessLogsBucketPolicy # Don't try to create the ALB until the bucket grants logging permissions
     Properties:
       IpAddressType: dualstack
       LoadBalancerAttributes:
