--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -249,6 +249,8 @@ Resources:
 
   Alb:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    DependsOn:
+      - AccessLogsBucketPolicy # Don't try to create the ALB until the bucket grants logging permissions
     Properties:
       IpAddressType: dualstack
       LoadBalancerAttributes:
