Improve security group docs

--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -40,6 +40,9 @@ Resources:
     # traffic to the services needed to launch tasks in ECS (via the egress
     # rule for EcsLaunchEndpointsInboundTrafficSecurityGroup, since that
     # security group is associated with the necessary VPC Endpoints).
+    #
+    # The security group for each ECS-related VPC Encpoint should include an
+    # ingress rule with this group as it's source group.
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: !Sub >-
