--- a/stacks/apps/dovetail-cdn-origin-request.yml
+++ b/stacks/apps/dovetail-cdn-origin-request.yml
@@ -78,11 +78,10 @@ Resources:
       RetentionInDays: 14
   OriginRequestFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
-    Condition: IsProduction
     Properties:
-      AlarmName: !Sub WARN [Dovetail-CDN Arranger] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS
+      AlarmName: !Sub ERROR [Dovetail-Cdn-OriginRequest] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS
       AlarmDescription: !Sub >-
-        ${EnvironmentType} Dovetail CDN Arranger Lambda function is failing, so
+        ${EnvironmentType} Dovetail CDN Origin Request function is failing, so
         some stitch requests or downloads may be impacted.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
