Match application tags

--- a/stacks/apps/dovetail-cdn-origin-request.yml
+++ b/stacks/apps/dovetail-cdn-origin-request.yml
@@ -79,7 +79,7 @@ Resources:
   OriginRequestFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Dovetail-Cdn-OriginRequest] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS
+      AlarmName: !Sub ERROR [Dovetail-CDN Origin Request] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail CDN Origin Request function is failing, so
         some stitch requests or downloads may be impacted.
