--- a/stacks/apps/dovetail-cdn-arranger.yml
+++ b/stacks/apps/dovetail-cdn-arranger.yml
@@ -156,7 +156,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub WARN [Dovetail-CDN Arranger] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS
+      AlarmName: !Sub ERROR [Dovetail-CDN Arranger] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail CDN Arranger Lambda function is failing, so
         some stitch requests or downloads may be impacted.
@@ -185,7 +185,7 @@ Resources:
   ArrangerFunctionLoggedWarnAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub WARN [Dovetail-Cdn-Arranger] Lambda function <${EnvironmentTypeAbbreviation}> LOGGED WARNS
+      AlarmName: !Sub WARN [Dovetail-CDN Arranger] Lambda function <${EnvironmentTypeAbbreviation}> LOGGED WARNS
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail Cdn Arranger Lambda function has logged some warnings.
       ComparisonOperator: GreaterThanThreshold
@@ -210,7 +210,7 @@ Resources:
   ArrangerFunctionLoggedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Dovetail-Cdn-Arranger] Lambda function <${EnvironmentTypeAbbreviation}> LOGGED ERRORS
+      AlarmName: !Sub ERROR [Dovetail-CDN Arranger] Lambda function <${EnvironmentTypeAbbreviation}> LOGGED ERRORS
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail Cdn Arranger Lambda function has logged some errors.
       ComparisonOperator: GreaterThanThreshold
