--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -166,11 +166,16 @@ Resources:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         CodeS3Bucket:
           Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         CodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
         CloudFrontOai: !Ref DovetailCdnArrangerCloudFrontOai
         EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         ArrangementsDynamodbAccessRole: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_ACCESS_ROLE
         ArrangementsDynamodbRegion: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_REGION
         ArrangementsDynamodbTable: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_TABLE
@@ -190,6 +195,8 @@ Resources:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         CodeS3Bucket:
           Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         CodeS3ObjectKey: !Ref DovetailCdnOriginRequestCodeS3ObjectKey
