Limit tmp disk usage

--- a/stacks/apps/dovetail-cdn-arranger.yml
+++ b/stacks/apps/dovetail-cdn-arranger.yml
@@ -98,6 +98,7 @@ Resources:
           ARRANGEMENTS_DDB_TTL: !Ref ArrangementsDynamodbTtl
           DOVETAIL_HOST: !Ref DovetailRouterHostname
           DOVETAIL_TOKEN: !Ref DovetailRouterToken
+          TMP_DISK_LIMIT: 500000000
           WORKSPACE_S3_BUCKET: !Ref DtCdnArrangerWorkspaceBucket
       Handler: index.handler
       Layers:
