Add Glue and Athena permissions

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1113,6 +1113,7 @@ Resources:
                   - acm:*
                   - apigateway:*
                   - application-autoscaling:*
+                  - athena:*
                   - autoscaling:*
                   - cloudfront:*
                   - cloudwatch:*
@@ -1122,6 +1123,7 @@ Resources:
                   - elasticloadbalancing:*
                   - es:*
                   - events:*
+                  - glue:*
                   - iam:*
                   - lambda:*
                   - logs:*
